--- a/styles.css
+++ b/styles.css
@@ -126,9 +126,16 @@ body {
 }
 
 .wrap-video {
-    margin: auto;
-    background-color: aqua;
+    max-width: 560px;
+    margin: 50px auto 0;
+    background-color: antiquewhite;
 }
+
+.wrap-video > .iframe {
+    width: 100%;
+}
+
+
 
 .footer {
     background-color: lightpink;
