--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@ body {
     margin: 0;
 }
 
+/* Header */
+
 .wrap-header {
     position: fixed;
     top: 0;
@@ -47,7 +49,7 @@ body {
     text-decoration: none;
 }
 
-
+/* Section main */
 
 .main {
     position: relative;
@@ -100,7 +102,6 @@ body {
     width: 100%;
     margin: 0 auto;
     padding: 0 54px;
-    background-color: rgba(31, 88, 88, 0.178);
 }
 
 .grid-features {
@@ -128,15 +129,61 @@ body {
 .wrap-video {
     max-width: 560px;
     margin: 50px auto 0;
-    background-color: antiquewhite;
 }
 
 .wrap-video > .iframe {
     width: 100%;
 }
 
+/* Section services card */
 
+.wrap-service {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 18px;
+    margin-top: 5em;
+    justify-items: center;
+}
+
+.card {
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 3px;
+}
+
+.card__product {
+    font-weight: 700;
+    padding: 16px 65px;
+    background-color: #DDDDDD;
+    border-bottom: 1px solid transparent;
+}
+
+.card__price {
+    margin: 15px 0;
+}
+
+.lorem-text {
+    padding-top: 15px;
+}
+
+.btn {
+    padding: 12px 16px;
+    margin: 40px 0 18px;
+    text-transform: uppercase;
+    font-size: 1rem;
+    border: none;
+    background-color: #F1C40F;
+    border-radius: 2px;
+}
+
+.btn:hover {
+    background-color: orange;
+}
+
+/* footer */
 
 .footer {
+    position: relative;
+    top: 300px;
     background-color: lightpink;
 }
